# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\QuizController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -15,6 +16,14 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::prefix('/quiz')->group(function () {
-    Route::get('/status/listar', [QuizController::class, 'listarStatus'])->name('api.quiz.status.listar');
+Route::prefix('/login')->group(function () {
+    Route::post('/professor', [AuthController::class, 'loginProfessor'])->name('api.login.professor');
+    Route::post('/aluno', [AuthController::class, 'loginAluno'])->name('api.login.aluno');
+});
+
+Route::middleware('jwt.authenticate')->group(function () {
+
+    Route::prefix('/quiz')->group(function () {
+        Route::get('/status/listar', [QuizController::class, 'listarStatus'])->name('api.quiz.status.listar');
+    });
 });
